--- a/src/main/webapp/main/style.css
+++ b/src/main/webapp/main/style.css
@@ -1,32 +1,8 @@
-
-.ibm-plex-sans-kr-light {
-  font-family: "IBM Plex Sans KR", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.ibm-plex-sans-kr-regular {
-  font-family: "IBM Plex Sans KR", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.ibm-plex-sans-kr-medium {
-  font-family: "IBM Plex Sans KR", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.ibm-plex-sans-kr-semibold {
-  font-family: "IBM Plex Sans KR", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.ibm-plex-sans-kr-bold {
-  font-family: "IBM Plex Sans KR", sans-serif;
-  font-weight: 700;
-  font-style: normal;
+@font-face {
+    font-family: 'TTHakgyoansimRikodeoR';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_keris@1.0/TTHakgyoansimRikodeoR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .greenbtn {
@@ -39,7 +15,7 @@
 }
 
 body{
-	font-family:"IBM Plex Sans KR", sans-serif;
+	font-family:"TTHakgyoansimRikodeoR";
 	font-size:20px;
 	font-weight:400;
 	background-color: #FCFBED; 
