--- a/src/main/webapp/main/style.css
+++ b/src/main/webapp/main/style.css
@@ -5,11 +5,6 @@
     font-style: normal;
 }
 
-.greenbtn {
-  background-color: #026873; 
-  color: white;
-}
-
 .green{
   color: #026873; 
 }
@@ -20,3 +15,39 @@ body{
 	font-weight:400;
 	background-color: #FCFBED; 
 }
+
+input{
+	
+    	font-family: 'TTHakgyoansimRikodeoR';
+}
+
+button{
+	
+    	font-family: 'TTHakgyoansimRikodeoR';
+}
+
+.transparent-button {
+	
+    	font-family: 'TTHakgyoansimRikodeoR';
+            background-color: transparent;
+            color: #026873;
+            border: 2px solid #026873;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 10px;
+        }
+
+        .transparent-button:hover {
+            background-color: #026873;
+            color: white;
+        }
+
+        .transparent-button:active {
+            background-color: #026873;
+            color: white;
+        }
