--- a/src/main/webapp/main/style.css
+++ b/src/main/webapp/main/style.css
@@ -19,6 +19,11 @@ body{
 input{
 	
     	font-family: 'TTHakgyoansimRikodeoR';
+    	border: 2px solid #026873;
+        padding: 10px 10px;
+        font-size: 14px;
+        margin: 4px 2px;
+        border-radius: 10px;
 }
 
 button{
