--- a/src/main/webapp/intoStory/style2.css
+++ b/src/main/webapp/intoStory/style2.css
@@ -19,7 +19,7 @@ body{
   background: #FCFBED;
 }
 .wrapper{
-  width: 770px;
+  width: 900px;
   padding: 35px;
   background: #fff;
   border-radius: 10px;
@@ -108,7 +108,7 @@ body{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  width: calc(100% - 140px);
+  width: calc(100% - 280px);
   justify-content: space-between;
 }
 .result-details li{
@@ -123,11 +123,11 @@ body{
   border-left: 1px solid #bfbfbf;
 }
 .result-details li p{
-  font-size: 19px;
+  font-size: 17px;
 }
 .result-details li span{
   display: block;
-  font-size: 20px;
+  font-size: 17px;
   margin-left: 10px;
 }
 li span b{
@@ -135,6 +135,10 @@ li span b{
 }
 li:not(:first-child) span{
   font-weight: 500;
+}
+
+.content .try{
+	margin-left: 50px;
 }
 @media (max-width: 745px) {
   .wrapper{
@@ -165,15 +169,16 @@ li:not(:first-child) span{
   }
   .result-details li p, 
   .result-details li span{
-    font-size: 17px;
+    font-size: 15px;
   }
 }
+
 @media (max-width: 518px) {
   .wrapper .content-box{
     padding: 10px 15px 0;
   }
   .typing-text p{
-    font-size: 18px;
+    font-size: 15px;
   }
   .result-details li{
     margin-bottom: 10px;
