--- a/src/main/webapp/intoStory/style2.css
+++ b/src/main/webapp/intoStory/style2.css
@@ -6,6 +6,17 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+
+svg{
+	left: 20px; /* 왼쪽에서 20px 떨어짐 */
+	position: fixed; /* 고정 위치 */
+    left: 20px; /* 왼쪽에서 20px 떨어지게 설정 */
+    top: 50%; /* 화면 높이의 중앙 */
+    transform: translateY(-50%);
+}
+svg:hover {
+        fill: rgb(107, 218, 196); /* 마우스를 올렸을 때 색상 */
+}
 body{
   display: flex;
   padding: 0 10px;
@@ -187,3 +198,4 @@ li:not(:first-child) span{
     margin-top: 10px;
   }
 }
+
